<resources>
    <string name="app_name" translatable="false">ArkaNull</string>

    <string name="gioca">Gioca</string>
    <string name="classifica">Classifica</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="login">Accedi</string>
    <string name="logout">Esci</string>
    <string name="accelerometro">Accelerometro</string>
    <string name="touch" translatable="false">Touch</string>
    <string name="salva">Salva</string>
    <string name="audio">Audio</string>
    <string name="facile">Facile</string>
    <string name="medio">Medio</string>
    <string name="difficile">Difficile</string>
    <string name="livelli">Livelli</string>
    <string name="carriera">Carriera</string>
    <string name="multiplayer" translatable="false">Multiplayer</string>
    <string name="scores">Punteggi</string>
    <string name="type_input">Tipo di input</string>
    <string name="Challanges">Sfide</string>
    <string name="newChallange">Nuova Sfida</string>
    <string name="replyChallange">Rispondi Sfida</string>
    <string name="historicalChallenges">Storico Sfide</string>
    <string name="crea">Crea Livello</string>
    <string name="tuolivello">Il Tuo Livello</string>
    <string name="giocataSingola" translatable="false">Single Player</string>


    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="title_activity_challange" translatable="false">Challange</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <string name="home">Home</string>

    <!-- Drawer Menu -->
    <string name="navigation_drawer_open">Apri menu laterale</string>
    <string name="navigation_drawer_close">Chiudi menu laterale</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
</resources>
