<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChallangeActivity">


    <Button
        android:id="@+id/newChallange"
        style="@style/AppThemePortraitSmartphone"
        android:layout_alignParentTop="true"
        android:onClick="openNewChallange"
        android:text="@string/newChallange" />

    <Button
        android:id="@+id/replyChallange"
        style="@style/AppThemePortraitSmartphone"
        android:layout_centerVertical="true"
        android:onClick="openReplyChallange"
        android:text="@string/replyChallange" />

    <Button
        android:id="@+id/historicalChallanges"
        style="@style/AppThemePortraitSmartphone"
        android:layout_alignParentBottom="true"
        android:onClick="openHistoricalChallange"
        android:text="@string/historicalChallenges" />

</RelativeLayout>