<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImpostazioniActivity">

    <RadioGroup
        android:id="@+id/activity_impostazioni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="611dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tipo di Input" />

        <RadioButton
            android:id="@+id/accelerometro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onTypeInputClicked"
            android:text="@string/accelerometro" />

        <RadioButton
            android:id="@+id/touch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onTypeInputClicked"
            android:text="@string/touch" />
    </RadioGroup>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="173dp"
        android:layout_marginBottom="128dp"
        android:text="@string/salva"
        android:onClick="onSaveSetting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>